# dolarmep-price-scrapper

./: LICENSE  README.md  example_usage.py  main.py  pyproject.toml
output/: dolar_mep_historico_latest.csv
