[project]
name = "dolar-historico-scrapper"
version = "0.1.0"
description = "Web scraper for historical Dólar MEP data from dolarhistorico.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "lxml>=4.9.0"
]
